--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <ngx-cs-slider (update)="handleSliderChange($event)"
                [props]="sliderProps"
-               [startAngle]="start" [angleLength]="length">
+               [startAngle]="start"
+               [angleLength]="length">
   <!-- start icon -->
   <svg:g class="acs-start-icon" transform="translate(-8, -8) scale(1.1)">
     <svg:g>
