feat(api-change): brings changes to api and app

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<ngx-cs-slider (update)="handleSliderChange($event)" [props]="sliderProps" [startAngle]="start" [angleLength]="length">
+<ngx-cs-slider (update)="handleSliderChange($event)" [props]="sliderProps" [startDate]="startDate" [endDate]="endDate">
   <!-- start icon -->
   <svg:g class="acs-start-icon" transform="translate(-8, -8) scale(1.1)">
     <svg:g>
