refactor: small part of refactoring

--- a/projects/ngx-circular-slider/src/lib/ngx-cs-slider/ngx-cs-slider.component.html
+++ b/projects/ngx-circular-slider/src/lib/ngx-cs-slider/ngx-cs-slider.component.html
@@ -1,5 +1,5 @@
-<svg #circle [attr.height]="getContainerWidth()"
-     [attr.width]="getContainerWidth()">
+<svg #circle [attr.height]="containerSideLength"
+     [attr.width]="containerSideLength">
 
   <defs>
     <linearGradient *ngFor="let segment of segments"
